Fix bad contrast in Inkscape UI
The Inksacpe UI is behaving weird for some elements where spinboxes
and scales are combined. The text color seemed to come from one element
(the scale) while the text came from another (the spinbox). Targeting
them directly seemed to be the only solution at the moment.

--- a/gtk-3.0/_common.scss
+++ b/gtk-3.0/_common.scss
@@ -507,6 +507,16 @@ scale {
   }
 }
 
+#SpinScale {
+  scale {
+    contents {
+      trough {
+        background-color: $text_field_background;
+      }
+    }
+  }
+}
+
 scrollbar {
   $slider_min_length: 40px;
   $slider_min_width: 3px;
